<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tiny RSS Reader</string>
    <string name="categories_title">Categories</string>
    <string name="feeds_title">Feeds</string>
    <string name="logout_action_msg">Logout</string>
    <string name="show_all_msg">Show all</string>
    <string name="show_unread_msg">Show unread only</string>
    <string name="oldest_first_msg">Oldest first</string>
    <string name="default_order_msg">Default order</string>
    <string name="show_categories_msg">Show categories</string>
    <string name="hide_categories_msg">Hide categories</string>
    <string name="switch_theme_msg">Switch theme</string>
    <string name="switch_to_dark_theme_msg">Go dark</string>
    <string name="switch_to_light_theme_msg">Go light</string>
    <string name="switch_to_auto_theme_msg">Auto theme</string>
    <string name="tpl_article_title">
<![CDATA[
        <h1 class="article-title"><a href="{{link}}">{{title}}</a></h1>
    ]]>
    </string>
    <string name="tpl_article_style">
<![CDATA[
        <style>
        	body.dark {
        		background-color: #000;
        		color: #eee;
        	}
        	.article-title {
        		padding: 4px;
        		font-size: 16pt;
        	}
        	.article-title a {
        		text-decoration: none;
        		color: #000;
        	}
        	.dark .article-title a {
        		color: #fff;
            }
         	.dark a {
        		color: #fff;
        	}
        </style>
    ]]>
    </string>
    <string name="tpl_article_script">
<![CDATA[
        <script>
        </script>
    ]]>
    </string>

</resources>