<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tinyrssreader="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools">

    <item
        android:id="@+id/list_action_refresh"
        android:icon="?attr/refresh_icon"
        app:showAsAction="never"
        android:title="@string/action_bar_refresh"
        tinyrssreader:showAsAction="never"/>
    <item
        android:id="@+id/toggle_show_unread"
        app:showAsAction="never"
        android:title="@string/show_all_msg"
        tinyrssreader:showAsAction="never"/>
    <item
        android:id="@+id/toggle_show_categories"
        app:showAsAction="never"
        android:title="@string/hide_categories_msg"
        tinyrssreader:showAsAction="never"/>
    <item
        android:id="@+id/toggle_show_feeds_in_cats"
        app:showAsAction="never"
        android:title="@string/show_feeds_in_cats_msg"
        tinyrssreader:showAsAction="never"/>
    <item
        android:id="@+id/switch_theme"
        app:showAsAction="never"
        android:title="@string/switch_theme_msg"
        tinyrssreader:showAsAction="never">
        <menu>
            <item
                android:id="@+id/switch_to_dark_theme"
                android:title="@string/switch_to_dark_theme_msg"/>
            <item
                android:id="@+id/switch_to_light_theme"
                android:title="@string/switch_to_light_theme_msg"/>
        </menu>
    </item>
    <item
        android:id="@+id/toggle_oldest_first"
        app:showAsAction="never"
        android:title="@string/oldest_first_msg"
        tinyrssreader:showAsAction="never"/>
    <item
        android:id="@+id/logout_action"
        app:showAsAction="never"
        android:title="@string/logout_action_msg"
        tinyrssreader:showAsAction="never"/>

</menu>